--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -268,7 +268,7 @@ header #menu-btn:hover{
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 4rem;
-    padding-top: 20rem;
+    padding-top: 13%;
     margin-bottom: 5%;
 }
 
@@ -317,7 +317,7 @@ header #menu-btn:hover{
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: flex-start ;
-    padding-top: 10rem;
+    padding-top: 10%;
     
 }
 
@@ -348,6 +348,7 @@ header #menu-btn:hover{
     padding-left:15%;
     text-align: left;
 }
+
 
 .home .content span{
     text-transform: none;
@@ -685,6 +686,11 @@ header #menu-btn:hover{
     
 }
 
+.portfolio{
+    margin-bottom: 10px;
+    min-height: 100vh;
+}
+
 .controls .button{
     cursor: pointer;
     margin: 0.5rem;
@@ -703,7 +709,15 @@ header #menu-btn:hover{
     gap: 0.5rem;
     padding: 2rem 0; 
     height: 100%;
-    
+}
+
+.portfolio .gallery p{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: var(--navy);
+    margin-bottom: 5px;
+    padding-top: 10px;
 }
 
 .portfolio-item{
