--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,7 +93,15 @@ section{
     background: var(--navy);
 }
 
-
+video {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; /* Keeps the video in the background */
+}
 
 
 /*--------------------- 0- Global CSS (End) ---------------------*/
@@ -287,7 +295,7 @@ header #menu-btn:hover{
     font-size: 2rem;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    display: inline-flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
@@ -296,6 +304,7 @@ header #menu-btn:hover{
     align-items: center;
     justify-content: center;
     margin: 0 0.5rem;
+
 }
 
 .home .social .fab:hover, .home .social .fas:hover{
@@ -971,7 +980,7 @@ footer .social .fab, footer .social .fas{
     text-align: center;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    display: inline-flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
