--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@
 /*--------------------- 0- Global CSS (Start) ---------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
-:root{
+:root {
     --navy: #2B2D42;
     --white: #EDF2F4;
     --grey: #8D99AE;
@@ -30,77 +30,71 @@
     --black: #353535;
     --red1: #EF233C;
     --red: #D90429;
-
 }
 
-*{
+* {
     font-family: 'Roboto', sans-serif;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     text-decoration: none;
     border: none;
     outline: none;
-    -webkit-transition: all 0.2s linear;
-       -moz-transition: all 0.2s linear;
-         -o-transition: all 0.2s linear;
-  	        transition: all 0.2s linear;
+    transition: all 0.2s linear;
 }
 
-*::selection{
+*::selection {
     color: var(--white);
     background-color: var(--navy);
 }
 
-html{
+html {
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-behavior: smooth;
     scroll-padding-top: 6rem;
 }
 
-body{
+body {
     background-color: var(--white);
 }
 
-section{
+section {
     padding: 2rem 5%;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 0.8rem;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     border-radius: 1rem;
     background-color: var(--navy);
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
     background-color: var(--white);
 }
 
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
     height: 1rem;
     width: 1rem;
     border-radius: 50rem;
     background-color: var(--grey);
 }
 
-.swiper-pagination-bullet-active{
+.swiper-pagination-bullet-active {
     width: 3rem;
     background: var(--navy);
 }
 
-video {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1; /* Keeps the video in the background */
+/* Center pagination bullets on mobile devices */
+@media (max-width: 768px) {
+    .swiper-pagination {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 
